--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "antd": "3.4.3",
     "formik": "1.3.2",
     "moment": "2.22.2",
-    "react": "16.3.2",
-    "react-dom": "16.3.2",
-    "react-redux": "5.0.4",
-    "redux": "3.6.0"
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-redux": "^7.1.3",
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "react-scripts": "1.0.0"
